--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -8,8 +8,8 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-The UI Shell can be customized to use any of the four IBM themes by applying
-inline theming to the shell zone.
+The UI Shell can be customized to use any of the four IBM themes by applying an
+inline theme to the shell zone.
 
 | Element      | Property         | Color token      |
 | ------------ | ---------------- | ---------------- |
@@ -42,14 +42,17 @@ inline theming to the shell zone.
 
 ### Header link
 
-| State   | Property         | Color token          |
-| ------- | ---------------- | -------------------- |
-| Enabled | text color       | `$text-secondary`    |
-| Hover   | background color | `$background-hover`  |
-|         | text color       | `$text-primary`      |
-| Focus   | border           | `$focus`             |
-| Active  | background color | `$background-active` |
-|         | text color       | `$text-primary`      |
+| State    | Property         | Color token           |
+| -------- | ---------------- | --------------------- |
+| Enabled  | text color       | `$text-secondary`     |
+| Hover    | background color | `$background-hover`   |
+|          | text color       | `$text-primary`       |
+| Focus    | border           | `$focus`              |
+| Active   | background color | `$background-active`  |
+|          | text color       | `$text-primary`       |
+| Selected | background color | `$background`         |
+|          | text color       | `$text-primary`       |
+|          | border-bottom    | `$border-interactive` |
 
 <Row>
 <Column colLg={8}>
@@ -63,31 +66,35 @@ inline theming to the shell zone.
 
 ### Sub-menu
 
-| Element  | State    | Property         | Color token          |
-| -------- | -------- | ---------------- | -------------------- |
-| Sub-menu | Enabled  | background color | `$background`        |
-|          |          | text color       | `$text-secondary`    |
-|          |          | svg              | `$icon-secondary`    |
-|          | Hover    | background color | `$background-hover`  |
-|          |          | text color       | `$text-primary`      |
-|          |          | svg              | `$icon-primary`      |
-|          | Focus    | border           | `$focus`             |
-|          | Active   | background color | `$background-active` |
-|          |          | text color       | `$text-primary`      |
-|          |          | svg              | `$icon-primary`      |
-|          | Selected | background color | `$layer`             |
-|          |          | text color       | `$text-primary`      |
-|          |          | svg              | `$icon-primary`      |
-| Item     | Enabled  | background color | `$layer`             |
-|          |          | text color       | `$text-secondary`    |
-|          |          | svg              | `$icon-secondary`    |
-|          | Hover    | background color | `$layer-hover`       |
-|          |          | text color       | `$text-primary`      |
-|          |          | svg              | `$icon-primary`      |
-|          | Focus    | border           | `$focus`             |
-|          | Active   | background color | `$layer-active`      |
-|          |          | text color       | `$text-primary`      |
-|          |          | svg              | `$icon-primary`      |
+| Element  | State    | Property         | Color token           |
+| -------- | -------- | ---------------- | --------------------- |
+| Sub-menu | Enabled  | background color | `$background`         |
+|          |          | text color       | `$text-secondary`     |
+|          |          | svg              | `$icon-secondary`     |
+|          | Hover    | background color | `$background-hover`   |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+|          | Focus    | border           | `$focus`              |
+|          | Active   | background color | `$background-active`  |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+|          | Selected | background color | `$layer`              |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+| Item     | Enabled  | background color | `$layer`              |
+|          |          | text color       | `$text-secondary`     |
+|          |          | svg              | `$icon-secondary`     |
+|          | Hover    | background color | `$layer-hover`        |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+|          | Focus    | border           | `$focus`              |
+|          | Active   | background color | `$layer-active`       |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+|          | Selected | background color | `$layer-selected`     |
+|          |          | text color       | `$text-primary`       |
+|          |          | svg              | `$icon-primary`       |
+|          |          | border-left      | `$border-interactive` |
 
 ![Sub-menu interactive states](images/header-style-7.png)
 
