--- a/src/pages/components/UI-shell-left-panel/style.mdx
+++ b/src/pages/components/UI-shell-left-panel/style.mdx
@@ -8,8 +8,8 @@ tabs: ['Usage', 'Style', 'Code']
 
 ## Color
 
-The UI Shell can be customized to use any of the four IBM themes by applying
-inline theming to the shell zone.
+The UI Shell can be customized to use any of the four IBM themes by applying an
+inline theme to the shell zone.
 
 | Element | Property         | Color token   |
 | ------- | ---------------- | ------------- |
@@ -30,13 +30,17 @@ inline theming to the shell zone.
 | State    | Property         | Color token            |
 | -------- | ---------------- | ---------------------- |
 | Enabled  | text color       | `$text-secondary`      |
+|          | icon color       | `$icon-secondary`      |
 | Hover    | background color | `$background-hover`    |
 |          | text color       | `$text-primary`        |
+|          | icon color       | `$icon-primary`        |
 | Focus    | border           | `$focus`               |
 | Active   | background color | `$background-active`   |
 |          | text color       | `$text-primary`        |
+|          | icon color       | `$icon-primary`        |
 | Selected | background color | `$background-selected` |
 |          | text color       | `$text-primary`        |
+|          | icon color       | `$icon-primary`        |
 |          | border           | `$border-interactive`  |
 
 ![Link states](images/left-nav-style-4.png)
