--- a/src/pages/components/UI-shell-right-panel/style.mdx
+++ b/src/pages/components/UI-shell-right-panel/style.mdx
@@ -8,10 +8,8 @@ tabs: ['Usage', 'Style', 'Code']
 
 ## Color
 
-_Note: The UI Shell does not currently use the Carbon theme tokens; theming
-options for the shell will be available in the future. All color used in the UI
-Shell is from the
-[IBM Design Language palette](https://www.ibm.com/design/language/elements/color#specifications)._
+The UI Shell can be customized to use any of the four IBM themes by applying an
+inline theme to the shell zone.
 
 | Element       | Property                  | Color token      |
 | ------------- | ------------------------- | ---------------- |
