--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -88,15 +88,22 @@ other components may still expand to the full width of a modal window.
   Margin-right for modals less than 36% (left) and greater than 36% (right).
 </Caption>
 
-<!--
-### Buttons widths
+### Button structure
 
-| Number of buttons    | Percentage of modal     | Positioning    |
-| -------------------- | ----------------------- | -------------- | 
-| 1                    | 50%                     | Flush right    |
-| 2                    | 50% each                | Full bleed     |
-| 3                    | 25% each                | Flush right    |
--->
+| Number of buttons | Percentage width of modal | Positioning                 |
+| ----------------- | ------------------------- | --------------------------- |
+| 1                 | 50%                       | Flush right                 |
+| 2                 | 50% each                  | Full bleed                  |
+| 3                 | 25% each                  | Flush right                 |
+| 3                 | 25% each                  | 1 flush left, 2 flush right |
+
+<Row>
+<Column colLg={8}>
+
+![Modal button sizes](images/modal-style-button.png)
+
+</Column>
+</Row>
 
 ## Sizes
 
