--- a/src/pages/components/slider/style.mdx
+++ b/src/pages/components/slider/style.mdx
@@ -29,7 +29,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Thumb:active   | fill             | `$interactive`     |
 | Track:active   | background-color | `$interactive`     |
 | Label:disabled | text color       | `$text-disabled`   |
-| Thumb:disabled | fill             | `$icon-disabled`   |
+| Thumb:disabled | fill             | `$border-disabled` |
 | Track:disabled | background-color | `$border-disabled` |
 
 ## Typography
