--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -138,9 +138,11 @@ component is coming soon.
 
 ### Tabs
 
-The tab component variant names are changing. Default tabs will become Line tabs
-and Container tabs will become Contained tabs. There are 3 new modifiers—tabs
-with icons, icon-only tabs, and secondary labels.
+The tab component variant names are changing. Default tabs will become _Line
+tabs_ and Container tabs will become _Contained tabs_. There are three new
+modifiers—tabs with icons, icon-only tabs, and secondary labels. Additionally,
+there is a new third alignment option for tab that allows for auto-widths where
+each tab size is determined by the label length.
 
 See Carbon's [tab](https://v11.carbondesignsystem.com/components/tabs/usage/)
 usage guidance for more information.
