docs(Motion/Type): update usage documenatation

--- a/src/pages/guidelines/motion/code.mdx
+++ b/src/pages/guidelines/motion/code.mdx
@@ -48,32 +48,9 @@ yarn add @carbon/motion
 
 ## Usage
 
-### Sass
-
-The `@carbon/type` package enables you to use typography from the IBM Design
-Language, including the type scale and fonts, along with typography design
-tokens from the Carbon Design System. It also comes with opinionated defaults
-for type styles on common elements like `h1`, `h2`, `p`, etc.
-
-You can use this package by writing the following:
-
-```scss
-@use '@carbon/type';
-
-// Include type reset
-@include type.reset();
-
-// Include default type styles, targets h1, h2, h3, etc
-@include type.default-type();
-
-// Include utility classes for type-related properties
-@include type.type-classes();
-
-.selector {
-  // Include a type style
-  @include type.style('productive-heading-01');
-}
-```
+The `@carbon/motion` package enables you to access motion curves and durations
+built for the IBM Design Language in Sass. You can access these values directly
+from the package by writing the following:
 
 ```scss
 @use '@carbon/motion';
@@ -92,6 +69,7 @@ You can use this package by writing the following:
 
 #### API
 
+<br>
 | Name                    | Type     |
 | :---------------------- | :------- |
 | `$duration-fast-01`     | Duration |
@@ -125,11 +103,11 @@ motion('standard', 'productive'); // Returns a string `cubic-bezier()` function
 
 ### Configuration
 
-You can configure parts of the `@carbon/type` package with Sass Modules. For
+You can configure parts of the `@carbon/motion` package with Sass Modules. For
 example, you can change the `$prefix` used by writing the following:
 
 ```scss
-@use '@carbon/type' with ($prefix: 'custom-prefix');
+@use '@carbon/motion' with ($prefix: 'custom-prefix');
 ```
 
 For a full list of options that you can configure, check out the table below.
