--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -50,7 +50,7 @@ Tooltip labels and text should be set in sentence case.
 | Property              | Font-size (px/rem) | Font-weight   | Type token       |
 | --------------------- | ------------------ | ------------- | ---------------- |
 | `.bx--tooltip__label` | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `p`                   | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| `p`                   | 14 / 0.875         | Regular / 400 | `$body-01` |
 
 ## Structure
 
