--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -14,8 +14,8 @@ Design annotations are needed for specific instances shown below, but for the st
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Design annotations</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Design recommendations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -56,13 +56,13 @@ Icon-only buttons have their labels exposed automatically on hover and focus.
 
 Buttons that open menus are separate components in Carbon. See [Dropdown](https://carbondesignsystem.com/components/dropdown/usage/) and [Overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).
 
-## Design annotations
+## Design recommendations
 
 Design annotations are needed for the following instances.
 
-### Labelling
+### Labeling
 
-When buttons do not have a persistent label, they must be annotated with a label that will be exposed on hover or focus.
+When buttons do not have a persistently displayed label, they must be annotated with a label that will be exposed on hover or focus.
 
 <Row>
 <Column colLg={8}>
@@ -74,7 +74,7 @@ When buttons do not have a persistent label, they must be annotated with a label
 
 Annotate the label for icon-only buttons so the proper tooltip appears.
 
-## Developer considerations
+## Development considerations
 
 Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
