--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -102,10 +102,10 @@ button styles for specific hover and focus states.
 
 Tooltip labels and text should be set in sentence case.
 
-| Element   | Font-size (px/rem) | Font-weight   | Type token         |
-| --------- | ------------------ | ------------- | ------------------ |
-| Label     | 12 / 0.75          | Regular / 400 | `$label-01`        |
-| Body text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Element   | Font-size (px/rem) | Font-weight   | Type token  |
+| --------- | ------------------ | ------------- | ----------- |
+| Label     | 12 / 0.75          | Regular / 400 | `$label-01` |
+| Body text | 14 / 0.875         | Regular / 400 | `$body-01`  |
 
 ## Structure
 
