--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -76,8 +76,8 @@ or `Click` depending on use case.
 </Row>
 
 <Caption>
-  The examples above are patterns and Carbon currently only supports the basic
-  toggletip outlined below. In the future, other toggle tip styles will be
+  The examples above are patterns. Carbon currently only supports the basic
+  toggletip outlined below. In the future, other toggletip styles will be
   available.
 </Caption>
 
