--- a/src/pages/components/accordion/accessibility.mdx
+++ b/src/pages/components/accordion/accessibility.mdx
@@ -15,8 +15,8 @@ Design annotations are needed for specific instances shown below, but for the st
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Design annotations</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Design recommendations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -32,12 +32,12 @@ Each accordion is a tab stop. `Space` or `Enter` keys expand or collapse accordi
 
 ![example of accordion keyboard interaction](images/accordion-accessibility-1.png)
 
+<Caption>Accordions are reached by `Tab` and activated by `Space` and `Enter` keys.</Caption>
+
 </Column>
 </Row>
 
-Accordions are reached by `Tab` and activated by `Space` and `Enter` keys.
-
-### Labelling and states
+### Labeling and states
 
 The collapsed or expanded state of the accordions is [programmatically set](https://www.ibm.com/able/requirements/requirements/#4_1_2) by default, eliminating the need for any [text equivalent](https://www.ibm.com/able/toolkit/design/content/text-equivalents/) for the chevron icons.
 
@@ -46,12 +46,12 @@ The collapsed or expanded state of the accordions is [programmatically set](http
 
 ![expanded and collapsed accordions](images/accordion-accessibility-2.png)
 
+<Caption>Carbon handles the accessibility of the chevron  indicators.</Caption>
+
 </Column>
 </Row>
 
-Carbon handles the accessibility of the chevron  indicators.
-
-## Design annotations
+## Design recommendations
 
 Design annotations are needed for the following instances.
 
@@ -64,10 +64,10 @@ Carbon accordions are not set as headings by default. For improved accessibility
 
 ![H1 and H2 annotations for headings, plus direction to ‘include accordion titles as headings'](images/accordion-accessibility-3.png)
 
+<Caption>If accordion titles act as headings, annotate for development.</Caption>
+
 </Column>
 </Row>
-
-If accordion titles act as headings, annotate for development.
 
 ### Alignment
 
@@ -78,12 +78,12 @@ Carbon chevrons are right-aligned by default, but left-aligned chevrons are more
 
 ![annotation stating ‘position chevrons on the left of accordion titles'](images/accordion-accessibility-4.png)
 
+<Caption>Annotate if the accordion chevrons should be left-aligned.</Caption>
+
 </Column>
 </Row>
 
-Annotate if the accordion chevrons should be left-aligned.
-
-## Developer considerations
+## Development considerations
 
 Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
