updated image; added caption

--- a/src/pages/components/button/accessibility.mdx
+++ b/src/pages/components/button/accessibility.mdx
@@ -29,10 +29,10 @@ Carbon bakes keyboard operation into its components, improving the experience of
 
 ![example of button keyboard interaction](images/button-accessibility-1.png)
 
+<Caption>Buttons can be reached by `Tab` and selected with `Space` or `Enter`.</Caption>
+
 </Column>
 </Row>
-
-Buttons can be reached by `Tab` and selected with `Space` or `Enter`.
 
 ### interaction
 
@@ -41,20 +41,19 @@ Buttons can be reached by `Tab` and selected with `Space` or `Enter`.
 
 ![a pointer hovering over an icon-only button shows the name ‘Close’](images/button-accessibility-2.png)
 
+<Caption>Icon-only buttons have their labels exposed automatically on hover and focus.</Caption>
+
 </Column>
 </Row>
-
-Icon-only buttons have their labels exposed automatically on hover and focus.
 
 <Row>
 <Column colLg={8}>
 
 ![an activated button reveals 3 options in a menu](images/button-accessibility-3.png)
 
+<Caption>Buttons that open menus are separate components in Carbon. See [Dropdown](https://carbondesignsystem.com/components/dropdown/usage/) and [Overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).</Caption>
 </Column>
 </Row>
-
-Buttons that open menus are separate components in Carbon. See [Dropdown](https://carbondesignsystem.com/components/dropdown/usage/) and [Overflow menu](https://carbondesignsystem.com/components/overflow-menu/usage/).
 
 ## Design recommendations
 
@@ -69,10 +68,10 @@ When buttons do not have a persistently displayed label, they must be annotated 
 
 ![a button with a pencil icon has an annotation ‘label=Rename’](images/button-accessibility-4.png)
 
+<Caption>Annotate the label for icon-only buttons so the proper tooltip appears.</Caption>
+
 </Column>
 </Row>
-
-Annotate the label for icon-only buttons so the proper tooltip appears.
 
 ## Development considerations
 
