--- a/src/pages/components/slider/accessibility.mdx
+++ b/src/pages/components/slider/accessibility.mdx
@@ -14,7 +14,7 @@ No accessibility annotations are needed for sliders, but keep these consideratio
 
 <AnchorLinks>
   <AnchorLink>What Carbon provides</AnchorLink>
-  <AnchorLink>Developer considerations</AnchorLink>
+  <AnchorLink>Development considerations</AnchorLink>
 </AnchorLinks>
 
 ## What Carbon provides
@@ -30,10 +30,10 @@ Tab order goes from slider to text input. Arrow keys are used to change the slid
 
 ![example of slider keyboard interaction](images/slider-accessibility-1.png)
 
+<Caption>Both the slider and input are in the tab order and keyboard operable.</Caption>
+
 </Column>
 </Row>
-
-Both the slider and input are in the tab order and keyboard operable.
 
 ### Labeling and updates
 
@@ -42,22 +42,22 @@ Both the slider and input are in the tab order and keyboard operable.
 
 ![slider label is connected to slider control and text input](images/slider-accessibility-2.png)
 
+<Caption>The slider label is programmatically associated with both the slider and input.</Caption>
+
 </Column>
 </Row>
-
-The slider label is programmatically associated with both the slider and input.
 
 <Row>
 <Column colLg={8}>
 
 ![pointer clicks on slider range and input updates to 80. input value changes to 75 and slider repositions to match](images/slider-accessibility-3.png)
 
+<Caption>The input value and slider position are in sync. An update to either causes the other to update.</Caption>
+
 </Column>
 </Row>
 
-The input value and slider position are in sync. An update to either causes the other to update.
-
-## Developer considerations
+## Development considerations
 
 Keep these considerations in mind if you are modifying Carbon or creating a custom component:
 
